--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ padding-bottom: 10px;
 font-size: 12px;
 font-weight: 400;
 padding-top: 10px ;
-padding-bottom: 10px;
+padding-bottom: 30px;
 
 }
 
@@ -47,7 +47,6 @@ padding-bottom: 10px;
     border-radius: 8px;
     border: 0px;
     color: #FFF;
-    font-style: normal;
     font-weight: 700;
     padding:  20px 38px;
     /* padding-top: 10px; */
@@ -56,12 +55,16 @@ padding-bottom: 10px;
 /* main section  */
 
 .about{
+    padding: 200px;
     text-align: center;
     padding-top: 100px;
+
 }
 .section-title{
+    margin: 50%;
  color: #272727;
 text-align: center;
+
 font-size: 30px;
 font-weight: 800;
 }
@@ -72,7 +75,257 @@ font-weight: 800;
     font-size: 14px;
     font-weight: 400;
     margin-top: 20px;
+    padding-bottom: 20px
 
 
 }
+
+.all-boxs{
+margin-bottom: 0px;
+
+}
+
+
+.pic{
+    width: 200px;
+    padding-top: 50px;
+    padding-top: 80px;
+    
+    
+}
+
+.all-boxs{
+    display: flex;
+    margin-left: 100px;
+    gap: 30px;
+    
+    
+    
+   
+}
+
+.boxs{
+    display: flex;
+    justify-content: center;
+    
+     width: 250px;
+     height: 350px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+    
+    
+
+
+}
+
+.link{
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    padding-right: 100px;
+    padding-bottom: 130px;
+
+}
+
+/* banner2  */
+
+.section{
+    padding: 40px;
+    background: border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05);
+}
+
+.banner2{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+
+    
+}
+
+.banner2-pic{
+    width: 318px;
+    height: 420px;
+}
+
+.banner2-info{
+
+text-align: center;
+justify-content: space-around;
+
+
+}
+
+.btn-bg{
+    
+    border-radius: 2px;
+    border: 0px;
+    color: #E55473;
+    font-weight: 1200;
+    padding:  10px 18px;
+    padding-top: 40px;
+    
+
+}
+
+.banner2_title{
+
+    color: #272727;
+    font-size: 35px;
+    font-weight: 700;
+    padding-bottom: 20px;
+
+}
+
+
+.about-section{
+width: 100vh;
+padding-right: 100px;
+
+}
+.section-title{
+    width: 100vh;
+  
+    margin: 50px 150px;
+   
+    
+    /* width: 1920px; */
+    /* height: 4867px */
+}
+
+.descriptionn{
+
+    color: rgba(39, 39, 39, 0.60);
+
+    font-size: 12px;
+    font-weight: 400;
+    padding-top: 10px ;
+    padding-bottom: 30px;
+
+}
+
+.about-section{
+    background-image: url('../developer-portfolio/images/hardy.png');
+
+width: 100vh;
+
+    margin-left: 300px;
+    padding: 60px;
+    text-align: center;
+    padding-top: 50px;
+
+
+}
+
+
+
+.section-titlee{
+
+   
+    color: #272727;
+text-align: center;
+font-size: 30px;
+font-weight: 800;
+padding-top: 40px;
+
+}
+
+.profile-pic{
+  display:flex;
+gap: 55px;
+width: 200px;
+height: 300px;
+margin: 50px;
+padding-bottom: 100px;
+
+
+}
+
+
+
+/* section form  */
+
+.banner-contain{
+    background: url('./images/Rectangle\ 9.png');
+    display: flex;
+    width: 1440px;
+    height: 449px;
+    justify-content: space-around;
+    padding-top:90px ;
+    background-repeat: no-repeat;
+    
+    
+}
+
+.banner-title{
+display: flex;
+
+}
+    
+.banner-title1{
+    color: #272727;
+
+   font-size: 40px;
+ font-weight: 800;
+ padding-bottom: 10px;
+
+  }
+  .description1{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    
+    padding-bottom: 10px;
+
+  }
+  .form{
+    width: 600px;
+    height: 54px;
+    
+
+  }
+  .btn-bgt{
+    background: #E55473;
+    border-radius: 3px;
+    border: 0px;
+    color: #FFF;
+    font-weight: 700;
+    font-size: 37px;
+    padding-top: 10px;
+
+
+    
+
+
+  }
+  .inline{
+    display: flex;
+    gap: 20px;
+   
+
+
+  }
+
+  .footer{
+    background: #111010;
+    width: 1922px;
+    height: 449px;
+
+
+
+
+  }
+    
+    
+
+
+    
+   
+   
+    
+    
+    
+
+
 
