--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ padding-right: 100px;
 
 }
 .section-title{
-    width: 100vh;
+    /* width: 100vh; */
   
     margin: 50px 150px;
    
@@ -206,7 +206,7 @@ padding-right: 100px;
 }
 
 .about-section{
-    background-image: url('../developer-portfolio/images/hardy.png');
+    
 
 width: 100vh;
 
